--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <p>
       I always enjoyed playing with tech and was lucky to build a career out of it.
-      I'm at Meta in production engineering building teams to solve challenging problems.
+      I'm at Meta in production engineering, building teams to solve challenging problems.
     </p>
 
     <p>
